Fix gap size

--- a/1510/ch07/css/styles.css
+++ b/1510/ch07/css/styles.css
@@ -192,7 +192,7 @@ footer a {
     .grid {
         display: grid;
         grid-template-columns: auto auto;
-        gap: 10px 10px;
+        gap: 10px;
     }
 
     aside {
@@ -224,7 +224,7 @@ footer a {
 
     .grid {
         grid-template-columns: auto auto auto;
-        gap: 30px 30px;
+        gap: 30px;
     }
 
     aside {
